--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -72,7 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="If you enjoy this app and wish to help support ad-free apps, please help support development by donating!"
+            android:text="If you enjoy this app and wish to help support development, please consider purchasing the ad-free version from Google Play."
             android:id="@+id/textView"
             android:gravity="center"
             android:paddingLeft="10dp"
@@ -85,7 +85,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Donate"
+            android:text="Google Play"
             android:layout_marginTop="10dp"
             android:id="@+id/donate"
             android:layout_below="@+id/textView"
