--- a/app/src/main/res/layout/copsyn.xml
+++ b/app/src/main/res/layout/copsyn.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Existence"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,17 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="The copula is a method of expressing constant being. That is, things that tend not to change. In English, we express this by context so that the receiver guesses that things don't change. But in Irish, we state this explicitly by having a certain word order."/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Examples of this in English would be stating name, gender or tying nouns to another. For example 'I am an Irishman' would take the copular syntax in Irish as this trait does change frequently, while the phrase 'I am happy' can change depending on mood frequently and therefore is not governed by the copula."/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +75,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="Construction"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +85,19 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="The copula is formed in Irish by using a special syntax as shown below, note that the pronoun 'é' refers to the noun's gender and can be interchanged with 'í' depending on the context. For referring to a dummy object, ie 'it is raining', where 'it' refers to nothing, the pronoun defaults to é in such a case."/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Is X é Y - X is/will be Y\nBa X é Y - X was/would be Y"/>
 
         <View
             android:layout_width="fill_parent"
